--- a/index.html
+++ b/index.html
@@ -1,14 +1,64 @@
-<!-- public/index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Required Meta Tags -->
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Total Home Cleaning</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Maggies Magic Touch is your go-to cleaning service, offering the best solutions for home and office cleanliness." />
+  <meta name="keywords" content="cleaning services, home cleaning, office cleaning, professional cleaning, Maggies Magic Touch" />
+  <meta name="author" content="Maggies Magic Touch" />
+
+  <!-- Open Graph Meta Tags for Social Media Sharing -->
+  <meta property="og:title" content="Maggies Magic Touch - Professional Cleaning Services" />
+  <meta property="og:description" content="We provide top-tier cleaning services to make your home or office spotless!" />
+  <meta property="og:url" content="https://mmt.galico.io" />
+  <meta property="og:image" content="https://mmt.galico.io/assets/images/og-image.jpg" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Maggies Magic Touch - Professional Cleaning Services" />
+  <meta name="twitter:description" content="Let us handle all your cleaning needs for your home or office." />
+  <meta name="twitter:image" content="https://mmt.galico.io/assets/images/twitter-image.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="/assets/styles/main.css" />
+  <!-- <link rel="preload" href="/assets/fonts/font.woff2" as="font" type="font/woff2" crossorigin /> -->
+
+  <!-- Title -->
+  <title>Maggies Magic Touch - Professional Cleaning Services</title>
+
+  <!-- Additional Optimization -->
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://mmt.galico.io" />
+
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+
 </head>
 <body>
   <div id="root"></div>
+
+  <!-- JavaScript -->
   <script type="module" src="/src/main.jsx"></script>
+  
+  <!-- Analytics (Example Google Analytics script, replace with actual) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXX-Y');
+  </script>
 </body>
 </html>
