added google calendar

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div id="root"></div>
-
+  <script src="https://apis.google.com/js/api.js"></script>
   <!-- JavaScript -->
   <script type="module" src="/src/main.jsx"></script>
   
