--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="/assets/styles/main.css" />
+  <!-- <link rel="stylesheet" href="/assets/styles/main.css" /> -->
   <!-- <link rel="preload" href="/assets/fonts/font.woff2" as="font" type="font/woff2" crossorigin /> -->
 
   <!-- Title -->
