--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
   <!-- Open Graph Meta Tags for Social Media Sharing -->
   <meta property="og:title" content="Maggies Magic Touch - Professional Cleaning Services" />
   <meta property="og:description" content="We provide top-tier cleaning services to make your home or office spotless!" />
-  <meta property="og:url" content="https://mmt.galico.io" />
-  <meta property="og:image" content="https://mmt.galico.io/assets/images/og-image.jpg" />
+  <meta property="og:url" content="https://maggiesmagictouch.com" />
+  <meta property="og:image" content="https://maggiesmagictouch.com/assets/images/og-image.jpg" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Maggies Magic Touch - Professional Cleaning Services" />
   <meta name="twitter:description" content="Let us handle all your cleaning needs for your home or office." />
-  <meta name="twitter:image" content="https://mmt.galico.io/assets/images/twitter-image.jpg" />
+  <meta name="twitter:image" content="https://maggiesmagictouch.com/assets/images/twitter-image.jpg" />
 
   <!-- Favicon -->
   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
@@ -44,7 +44,7 @@
 
   <!-- Additional Optimization -->
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://mmt.galico.io" />
+  <link rel="canonical" href="https://maggiesmagictouch.com" />
 
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
