--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta name="twitter:image" content="https://maggiesmagictouch.com/assets/images/twitter-image.jpg" />
 
   <!-- Favicon -->
-  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="src/assets/images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
 
   <!-- Stylesheets -->
