--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-N697D43L');</script>
+  })(window,document,'script','dataLayer','GTM-N697D43L');</script> -->
   <!-- End Google Tag Manager -->
   <!-- Required Meta Tags -->
   <meta charset="UTF-8" />
@@ -14,37 +14,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Maggies Magic Touch is your go-to cleaning service, offering the best solutions for home and office cleanliness." />
-  <meta name="keywords" content="cleaning services, home cleaning, office cleaning, professional cleaning, Maggies Magic Touch" />
-  <meta name="author" content="Maggies Magic Touch" />
+  <!-- General Meta Tags -->
+  <meta name="description" content="Kaplan & Kaplan Law - Dedicated Injury Lawyers in New Jersey, ensuring you get the compensation you deserve." />
+  <meta name="keywords" content="injury lawyer, workers' compensation, personal injury attorney, workplace injury, legal representation, Kaplan & Kaplan Law" />
+  <meta name="author" content="Kaplan & Kaplan Law" />
 
   <!-- Open Graph Meta Tags for Social Media Sharing -->
-  <meta property="og:title" content="Maggies Magic Touch - Professional Cleaning Services" />
-  <meta property="og:description" content="We provide top-tier cleaning services to make your home or office spotless!" />
-  <meta property="og:url" content="https://maggiesmagictouch.com" />
-  <meta property="og:image" content="https://maggiesmagictouch.com/assets/images/og-image.jpg" />
+  <meta property="og:title" content="Kaplan & Kaplan Law - Trusted Injury Lawyers" />
+  <meta property="og:description" content="Injured at work? Our experienced attorneys fight for your rights and help you get the benefits you deserve." />
+  <meta property="og:url" content="https://workerscompensationlawyer.galico.io" />
+  <meta property="og:image" content="https://workerscompensationlawyer.galico.io/assets/images/og-image.jpg" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Maggies Magic Touch - Professional Cleaning Services" />
-  <meta name="twitter:description" content="Let us handle all your cleaning needs for your home or office." />
-  <meta name="twitter:image" content="https://maggiesmagictouch.com/assets/images/twitter-image.jpg" />
+  <meta name="twitter:title" content="Kaplan & Kaplan Law - Expert Injury Lawyers" />
+  <meta name="twitter:description" content="Legal experts specializing in workplace injuries, personal injury claims, and workers' compensation in New Jersey." />
+  <meta name="twitter:image" content="https://workerscompensationlawyer.galico.io/assets/images/twitter-image.jpg" />
 
   <!-- Favicon -->
-  <link rel="icon" href="src/assets/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
 
-  <!-- Stylesheets -->
-  <!-- <link rel="stylesheet" href="/assets/styles/main.css" /> -->
-  <!-- <link rel="preload" href="/assets/fonts/font.woff2" as="font" type="font/woff2" crossorigin /> -->
-
   <!-- Title -->
-  <title>Maggies Magic Touch - Professional Cleaning Services</title>
+  <title>Kaplan & Kaplan Law - Experienced Injury Attorneys in New Jersey</title>
 
   <!-- Additional Optimization -->
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://maggiesmagictouch.com" />
+  <link rel="canonical" href="https://workerscompensationlawyer.galico.io" />
 
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,20 +50,20 @@
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N697D43L"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N697D43L"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
   <!-- End Google Tag Manager (noscript) -->
   <div id="root"></div>
   <script src="https://apis.google.com/js/api.js"></script>
   <!-- JavaScript -->
   <script type="module" src="/src/main.jsx"></script>
-  <script>
+  <!-- <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
       dataLayer.push(arguments);
     }
     gtag('js', new Date());
     gtag('config', 'UA-XXXXX-Y');
-  </script>
+  </script> -->
 </body>
 </html>
